# mcp-conserver

./: .gitignore  README.md  mcp.json.example  pyproject.toml
.github/workflows/: python-publish.yml
src/mcp_conserver/: __init__.py  expect.py  libconserver.py  lifespan.py  session.py
src/mcp_conserver/server/: __init__.py  connection.py  expect.py  query.py  shell.py
